# TetrisByAnnaD

./: .gitignore  CMakeLists.txt  Makefile  algs.cpp  algs.h  base_algs.cpp  base_math.cpp  base_math.h  base_types.h  build.bat  build.sh  charbmp.cpp  charbmp.h  ctime.csv  debug.cpp  game.cpp  game.h  game_charbmp.cpp  game_charbmp.h  game_tetro.cpp  game_tetro.h  game_well.cpp  game_well.h  license.txt  main.cpp  math.h  mmath.cpp  mmath.h  platform_game.h  platform_layer.cpp  platform_layer.h  project.4coder  readme.txt  sdl_game  sdl_game.cpp  sdl_game.h  tetro.cpp  tetro.h  well.cpp  well.h
